--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,28 @@
 
 }
 
+.button:active {
+  opacity: 0.3;
+}
+
+.resetbutton {
+  background-color: #ffe45e;
+  border: none;
+  border-radius: 25px;
+  margin-left: 10px;
+  width: 100px;
+  height: 50px;
+  font-size: 25px;
+  text-align: center;
+  color: white;
+  font-family: 'Chivo Mono', monospace;
+
+}
+
+.resetbutton:active {
+  opacity: 0.3;
+}
+
 .blink {
   animation: blink-animation 2s steps(5, start) infinite;
   -webkit-animation: blink-animation 2s steps(5, start) infinite;
